# ultrabalancer

./: .gitignore  BETA-LAUNCH.md  CMakeLists.txt  HEALTH_CHECK_FEATURE.md  Makefile  README.md  basic_test.sh  compile_commands.json  manual_test.sh  stress_test.sh  test_db_pool_runtime
changes/: 2025-10-04-performance-optimization.md  2025-10-05-config-parser-enhancement.md  2025-10-08-health-check-failover.md  2025-10-12-compiler-warnings-cleanup-new-features.md  2025-10-13-database-load-balancing.md
config/: ultrabalancer.cfg  ultrabalancer.yaml
docs/: DEVELOPER.md  HOWITWORKS.md  HOWTOUSE.md  algorithms.md  api.md  architecture.md  configuration.md  contributing.md  database-loadbalancing.md  howtosetuproundrobin.md  howtosetupultrabalancer.md  howtosetupwithyourdockerprocess.md  howtosetupwithyourtypescriptcode.md  howtouseitwithyourcode.md  performance.md  troubleshooting.md
examples/: backend.go  test_setup.sh
include/: stick_tables.h  ultrabalancer.h
include/acl/: acl.h
include/cache/: cache.h
include/config/: config.h
include/core/: common.h  connection_pool.hpp  lb_health.h  lb_memory.h  lb_network.h  lb_types.h  lb_utils.h  loadbalancer.h  proxy.h  request_router.hpp
include/database/: db_health.h  db_pool.h  db_pool.hpp  db_protocol.h  db_router.h
include/health/: health.h
include/http/: http.h
include/ssl/: ssl.h
include/stats/: metrics_aggregator.hpp  stats.h
include/utils/: buffer.h  log.h
src/: main.c  stick_tables.c
src/acl/: acl.c
src/cache/: cache.c
src/config/: config.c
src/core/: connection_pool.cpp  global.c  lb_core.c  listener.c  proxy.c  request_router.cpp  server.c  session.c
src/database/: db_health.c  db_pool.c  db_pool.cpp  db_protocol.c  db_router.c
src/health/: checks.c  health.c
src/http/: http_parser.c
src/network/: lb_net.c  lb_network.c
src/ssl/: ssl_sock.c
src/stats/: metrics_aggregator.cpp  stats.c
src/utils/: buffer.c  log.c  memory.c
tests/: integration_test.py  simple_config_test.c  test_config.c  test_core.c
tests/load_balancer_tests/: api_server.py  api_start.sh  load_sender.py  load_sender.sh
